token login disable edited tests for getReservation and endReservation